<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--region main content page -->
    <string name="main_content_bottom_menu_home">首页</string>
    <string name="main_content_bottom_menu_classify">分类</string>
    <string name="main_content_bottom_menu_system">体系</string>
    <string name="main_content_bottom_menu_mine">我的</string>
    <string name="main_content_bottom_menu_navigator">导航</string>
    <!--endregion -->

    <string name="main_title_official_accounts">公众号</string>
    <string name="main_title_project">项目</string>

    <!--region main drawer page -->
    <string name="main_drawer_click_login">点击登录</string>
    <string name="main_drawer_user_id">ID:%d</string>
    <string name="main_drawer_user_coin_info">积分:%1$d 等级:%2$d 排名:%3$s</string>
    <string name="main_drawer_group_other">其他</string>
    <string name="main_drawer_logout">退出登录</string>
    <string name="main_drawer_menu_collect">收藏</string>
    <string name="main_drawer_menu_theme_dark">深色模式</string>
    <!--endregion -->

    <!--region home page -->
    <string name="home_tab_explore">首页</string>
    <string name="home_tab_square">广场</string>
    <string name="home_tab_answer">问答</string>
    <!--endregion -->


    <string name="article_tag_top">置顶</string>
    <string name="article_tag_new">新</string>
    <string name="article_chapter_name">%1$s • %2$s</string>

    <!--region Login page -->
    <string name="login_title">登录</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_register_label">注册账号？</string>
    <string name="login_error_input_account">请输入账号</string>
    <string name="login_error_input_password">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <!--endregion -->

    <!--region 导航tab title -->
    <string name="navigator_tab_navigator">导航</string>
    <string name="navigator_tab_series">体系</string>
    <string name="navigator_tab_tutorial">教程</string>
    <!--endregion -->
</resources>